--- a/src/index.css
+++ b/src/index.css
@@ -74,16 +74,16 @@ body {
 
 /* 新しいアイテム追加時のアニメーション */
 .belt-item-enter {
-  animation: belt-item-slide 0.5s ease-out;
+  animation: belt-item-slide 0.5s ease;
 }
 
 @keyframes belt-item-slide {
   0% {
-    transform: translateX(-50px);
+    translate: var(--slide-distance, calc(100cqw)) 0;
     opacity: 0;
   }
   100% {
-    transform: translateX(0);
+    translate: 0 0;
     opacity: 1;
   }
 }
